Bug 272817 - Shortcut no longer there for "End Turn"
Summary: Shortcut no longer there for "End Turn"
Status: RESOLVED FIXED
Alias: None
Product: konquest
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.0
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Pierre Ducroquet
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-05-08 23:22 UTC by egberts
Modified: 2013-10-30 01:08 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.12
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description egberts 2011-05-08 23:22:12 UTC
Version:           2.0 (using KDE 4.6.1) 
OS:                Linux

In older version of the games, "end turn" used to be keyboard-driven, as well as mouse-clickable.   That shortcut key was Control-E or Ctrl-E.

Now, the game play takes 4 times as long and hurts my wrist from excessive mouse clicks.

Can we have the shortcut key for "End Turn" configurable?

Reproducible: Always

Steps to Reproduce:
start konquest
start a game
select moves
Press control-E to end turn

Actual Results:  
Upon pressing control-E, nothing happened.

Expected Results:  
Advances to the next game turn.
Comment 1 Mark Haferkamp 2012-04-17 01:52:01 UTC
For me, Alt+E ends the turn. It should still be configurable, though, to be consistent with virtually every button in virtually every KDE program. I'm running Konquest 2.1 on KDE 4.8.2 on 32-bit Chakra Linux, if that makes any difference.
Comment 2 michael 2013-01-18 00:05:58 UTC
I have konquest 2.1 on kde 4.9.5 and this is configurable on my system using Settings->Configure Shortcuts. Its set to Ctrl+End by default. So it appears to be addressed in the newest kde/konquest. I am using kubuntu 12.10 distro.
Comment 3 Alexander Schuch 2013-10-30 00:22:50 UTC
Git commit 2587940e583982c0550e834c6d2891ead29e570a by Alexander Schuch.
Committed on 30/10/2013 at 00:16.
Pushed by aschuch into branch 'master'.

Add action for "end turn".

The action to end a turn now is a "real" action. It is available in the menu
bar and as such can get any shortcut assigned by the user. It can also be added
to the toolbar.
REVIEW: 113477
GUI:

M  +14   -8    mainwin.cc
M  +2    -1    mainwin.h

http://commits.kde.org/konquest/2587940e583982c0550e834c6d2891ead29e570a