Add action for "end turn".

The action to end a turn now is a "real" action. It is available in the menu
bar and as such can get any shortcut assigned by the user. It can also be added
to the toolbar.

BUG: 272817
REVIEW: 113477
GUI: